# artifactsmmo

./: .gitignore  .opencode  AGENTS.md  CLAUDE.md  CURRENT_STATUS.md  FUTURE_AI_PLAYER.md  LOOP.md  NOTES.md  README.md  artifactsmmo-api-client  assessment_report.md  claude_files  controller.yaml  coverage.json  final_coverage.json  find_missing_params.py  fix_all_state_parameters.py  fix_all_syntax.py  fix_analyze_materials_test.py  fix_syntax.py  generate_openapi_client.sh  implementation_plan.md  logs.txt  map.yaml  openapi.json  openapi_client_config.yml  openapi_new.json  pyproject.toml  report.md.  run.sh  test_reaction_application.py  traces.jsonl  wakko.yaml  world.yaml
.github/workflows/: census-gate.yml  formal-gate.yml  lint-gate.yml  mutation-gate.yml  pytest.yml  snapshot-refresh.yml  type-gate.yml
.superpowers/sdd/: task-1-report.md
claude_files/personas/: maintenance-support.md  project-manager.md  requirements-analyst.md
config/: action_configurations.yaml  actions.yaml  ai_player.yaml  consolidated_state_defaults.yaml  consolidated_state_schema.yaml  default_actions.yaml  equipment_analysis.yaml  equipment_upgrade_actions.yaml  goal_templates.yaml  goap_start_state.yaml  goap_weights.yaml  location_states.yaml  logging.yaml  state_engine.yaml  validation_rules.yaml
data/: action_configurations.yaml  actions.yaml  default_actions.yaml  goal_templates.yaml  knowledge.yaml  map.yaml  skill_goals.yaml  state_configurations.yaml  state_engine.yaml  test_knowledge.yaml  world.yaml
docs/: ARCHITECTURE.md  BUG_PREVENTION_PATTERNS.md  CLI_DIAGNOSTICS.md  CLI_USAGE.md  CONFIGURATION.md  CURRENT_STATUS.md  FIX_CRAFTING_GOAL.md  GOAP_EXECUTION_MANAGER_REFACTOR_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_batch_operations.md  IMPLEMENTATION_SUMMARY_bulk_banking.md  IMPLEMENTATION_SUMMARY_combat_assessment.md  IMPLEMENTATION_SUMMARY_pathfinding.md  INITIAL_STUBOUT.md  LEVEL_FIFTY_RESIDUALS.md  PLAN_acquisition_timing.md  PLAN_adversarial_fixes.md  PLAN_artifact_utility_value.md  PLAN_artifactsmmo_cli.md  PLAN_bank_drain_junk.md  PLAN_batch_operations.md  PLAN_boss_achievement_progression.md  PLAN_bulk_banking.md  PLAN_c2_composed_liveness.md  PLAN_calculate_not_hardcode.md  PLAN_combat_abilities_model.md  PLAN_combat_assessment.md  PLAN_combat_beatability_unification.md  PLAN_combat_buff_consumables.md  PLAN_combat_stats_haste_lifesteal.md  PLAN_composition_correctness.md  PLAN_consumable_effects.md  PLAN_currency_grind_falloff.md  PLAN_currency_normalization.md  PLAN_deterministic_craft_plan.md  PLAN_discard_disposal_route.md  PLAN_drop_farming.md  PLAN_dryrun_cost_pollution.md  PLAN_dual_ring_carveout.md  (+70 more)
docs/behavioral_completeness/: BACKLOG.md  INVENTORY_MATRIX.md  MATRIX.md  OBTAIN_PARITY_MATRIX.md  PROOF_CONCEPT_INDEX.md  README.md  RECYCLE_SOURCE_MATRIX.md  REQUIREMENT_PARITY_MATRIX.md  content_tiers.md
docs/craft_completeness/: BACKLOG.md  MATRIX.md  README.md
docs/plans/: PLAN_debug_and_implement_ai_player.md  PLAN_one_class_per_file.md
docs/postmortems/: 2026-05-26-tlaplus-pluspy-formal-verification.md
formal/: Formal.lean  Oracle.lean  README.md  conftest.py  gate.sh  lake-manifest.json  lakefile.toml  run.py  setup.sh
formal/Formal/: AcceptTaskGate.lean  AccumulationSell.lean  ActionApplicability.lean  ActionCostNonneg.lean  ActionSetCompleteness.lean  ApplyBaseline.lean  ArbiterSelect.lean  Audit.lean  BankExpansionTiming.lean  BankSelection.lean  BuySourceVenue.lean  CalculatePath.lean  CheapestPath.lean  CombatTargetExistence.lean  CompleteTaskIncome.lean  ConsumableSelection.lean  Contracts.lean  CraftPlanDriver.lean  CraftVsBuy.lean  CurrencyAffordFastFail.lean  CycleInvariants.lean  CyclesForProgress.lean  DecideKey.lean  DisposalRoute.lean  DominancePareto.lean  DoomedMemo.lean  EquipValueAugmented.lean  EquipmentProfile.lean  EquipmentScoring.lean  EventWindow.lean  FallbackChain.lean  GameDataAccessors.lean  GatherApply.lean  GatherSelection.lean  GearLatch.lean  GearPolicy.lean  GearTaxonomy.lean  GearValue.lean  GoalSystem.lean  GoalValueBands.lean  (+75 more)
formal/diff/: COVERAGE_CARVE_OUT.md  coverage_audit.py  coverage_audit_report.txt  kill_rate_audit.py  kill_rate_report.txt  mutate.py  mutation_anchor.py  obtain_source_scenarios.py  openapi_conformance.py  openapi_conformance_report.txt  oracle_client.py  server_axiom_replay.py  server_axiom_replay_report.txt  test_accumulation_sell_diff.py  test_action_cost_nonneg_diff.py  test_apply_baseline_diff.py  test_arbiter_select_diff.py  test_bank_expansion_diff.py  (+118 more)
openapi_templates/: types.py.jinja
personas/: developer.md  devops-engineer.md  qa-engineer.md  system-architect.md
scripts/: cast_v3_to_v2.py  diag_census_bugs.py  extract_lean.py  gen_content_tiers.py  gen_craft_completeness.py  gen_inventory_completeness.py  gen_obtain_parity.py  gen_proof_concept_index.py  gen_recycle_source_completeness.py  gen_requirement_parity.py  install_hooks.sh  p0_tiebreak_probe.py  pre_commit.sh  preview_sprites.py  probe_currency_arbitrage.py  probe_haste.py  run_tests.sh  timelapse_cast.py
secrets/: secrets.yaml
src/: cli.py  diagnostic_tools.py  main.py
test/: base_test.py  fixtures.py  test_action_execution_regression.py  test_api_optimization_fixes.py  test_base.py  test_bug_regression.py  test_character_management.py  test_cli_diagnostic_integration.py  test_cli_log_level.py  test_diagnostic_tools.py  test_diagnostic_tools_coverage.py  test_goal_manager_cooldown_fix.py  test_goap_state_completeness.py  test_knowledge_base_serialization_regression.py  test_main.py  test_main_comprehensive.py  test_main_diagnostic_integration.py  test_main_entry_point.py  test_main_simple.py  test_refactoring_regression.py  test_skill_based_recipe_selection.py  test_slime_attack_behavior.py
tests/: __init__.py  conftest.py  test_client_manager.py  test_config.py  test_fixtures_init.py  test_integration.py  test_main.py  test_maintenance_detector.py  test_maintenance_page.py  test_tests_init.py
(+1841 files in other folders)
