[project]
name = "artifactsmmo-ai-player"
version = "0.0.1"
description = "An AI player for operating a character in ArtifactsMMO through the API"
requires-python = ">=3.13"
dependencies = [
    "aenum>=3.1.16",
    "artifactsmmo-api-client",
    "httpx>=0.28.1",
    "openapi-python-client",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250516",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["F", "I", "UP", "E", "W"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short"
markers = [
    "integration: marks tests as integration tests"
]

[tool.uv.sources]
artifactsmmo-api-client = { path = "artifactsmmo-api-client", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]
