[project]
name = "artifactsmmo-cli"
version = "0.0.1"
description = "CLI/TUI interface for ArtifactsMMO game"
requires-python = ">=3.13"
dependencies = [
    "aenum>=3.1.16",
    "artifactsmmo-api-client",
    "httpx>=0.28.1",
    "openapi-python-client",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.0.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "types-pyyaml>=6.0.12.20250516",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
artifactsmmo = "artifactsmmo_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artifactsmmo_cli"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["F", "I", "UP", "E", "W"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short"
markers = [
    "integration: marks tests as integration tests"
]

[tool.uv.sources]
artifactsmmo-api-client = { path = "artifactsmmo-api-client", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]
