[project]
name = "artifactsmmo-cli"
version = "0.0.1"
description = "CLI/TUI interface for ArtifactsMMO game"
requires-python = ">=3.13"
dependencies = [
    "aenum>=3.1.16",
    "artifactsmmo-api-client",
    "httpx>=0.28.1",
    "openapi-python-client",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.0.0",
    "sqlmodel>=0.0.38",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "types-pyyaml>=6.0.12.20250516",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
artifactsmmo = "artifactsmmo_cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artifactsmmo_cli"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# F = pyflakes, I = isort, UP = pyupgrade, E/W = pycodestyle,
# B = flake8-bugbear (likely-bug patterns), SIM = simplifications,
# RUF = ruff-native diagnostics. Adding the bug-finder families surfaces
# common runtime hazards (mutable defaults, bare exceptions, etc.).
select = ["F", "I", "UP", "E", "W", "B", "SIM", "RUF"]
ignore = [
    "UP017",  # repo convention: timezone.utc (not datetime.UTC).
    "SIM108", # ternary-vs-if-else is style not bug.
    "SIM117", # nested-with is stylistic.
    "RUF012", # mutable class attrs (defaults to dict; tests use this).
    "B904",   # raise-without-from in except blocks; pervasive repo style (78 sites).
    "RUF001", # repo convention: typographic unicode (en dash, x) in strings.
    "RUF002", # same convention in docstrings.
    "RUF003", # same convention in comments (e.g. Withdraw(ash_plank x7)).
]

[tool.ruff.lint.flake8-bugbear]
# typer's declarative CLI API requires call-in-default (B008 false positive).
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
extraPaths = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short --strict-markers -W error --cov=src/artifactsmmo_cli --cov-report=term-missing --cov-fail-under=100"
markers = [
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
branch = false
source = ["src/artifactsmmo_cli"]
# scripts/ are live-I/O wrappers (need API/token); exercised manually, not by the test suite.
omit = ["scripts/*"]
# The inventory census fans cells out over a ProcessPoolExecutor; without
# "multiprocessing" the worker processes' execution (run_cell and everything it
# drives) goes unmeasured and the 100% gate breaks. "thread" must stay in the
# list too — it is coverage's default, and dropping it stops tracing threaded
# code such as the play command's bot worker/excepthook. pytest-cov combines the
# per-worker data files.
concurrency = ["multiprocessing", "thread"]
sigterm = true

[tool.uv.sources]
artifactsmmo-api-client = { path = "artifactsmmo-api-client", editable = true }

[dependency-groups]
dev = [
    "hypothesis>=6.153.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.5",
]
